--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://192.168.31.92:40001/html/app/nqc/resigned.ipa</string>
+					<string>http://192.168.31.92:40001/html/Wechat.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
